Accessibility - Fix BDC and Referral table color and contrast

--- a/src/frontend/css/components/search.css
+++ b/src/frontend/css/components/search.css
@@ -29,7 +29,7 @@
   &-gray {
     @apply text-primary-1000 font-medium bg-gray-200;
     &::placeholder {
-      @apply text-gray-400 font-medium;
+      @apply text-gray-500 font-medium italic;
     }
   }
 }
