--- a/src/frontend/css/components/table.css
+++ b/src/frontend/css/components/table.css
@@ -12,13 +12,13 @@
     }
   }
   th {
-    @apply text-gray-400 text-base p-0 font-normal;
+    @apply text-gray-450 text-base p-0 font-normal;
   }
 
   td {
     @apply text-black text-base pl-0 py-2 pr-8 font-normal;
     &:nth-of-type(2n) {
-      @apply text-gray-400 text-sm;
+      @apply text-gray-450 text-sm;
     }
   }
 }
